# Trading-Journal

./: .gitignore  Procfile  benchmark.py  create_tables.py  patch_tests.py  pyproject.toml  pytest.ini  requirements.txt  vercel.json
app/routes/: app.py  auth_routes.py  database.py  fix_db.py  form.py  main_routes.py  tempCodeRunnerFile.py  utils.py
app/static/css/: style.css
app/static/javascript/: script.js
app/templates/: add_trade.html  edit_trade.html  home.html  index.html  layout_dashboard.html  login.html  performance_log.html  register.html  set_daily_target.html
app/templets/: add_trade.html  edit_trade.html  home.html  index.html  layout.html  login.html  register.html
tests/: conftest.py  test_add_trade_redirect.py  test_app.py  test_auth_routes.py  test_config.py  test_form.py  test_logout.py  test_main_routes.py  test_security_config.py  test_utils.py
