[project]
name = "trading-journal"
version = "0.1.0"
description = "Trading Journal application"
requires-python = ">=3.9"
dependencies = [
    "Flask==3.1.3",
    "Flask-SQLAlchemy==3.1.1",
    "Flask-WTF==1.2.2",
    "PyMySQL==1.1.2",
    "SQLAlchemy==2.0.47",
    "WTForms==3.2.1",
    "psycopg2-binary",
    "python-dotenv==1.2.1",
    "Werkzeug==3.1.6",
    "gunicorn==21.2.0"
]

[tool.vercel]
entrypoint = "app.routes.app:app"
